cabal-version:       2.2
                     -- ^
                     -- for CommonStanzas, i.e. ❲ common _ ❳.

build-type:          Simple

--------------------------------------------------

name:                xxx-package-xxx
version:             0.0.0
                     -- ^ ❲ A.B.C.D ❳:
                     --
                     -- • ❲ A.B ❳ is the MajorVersion,
                     -- • ❲ C ❳ is the MinorVersion,
                     -- • ❲ D ❳ is a PatchVersion.

-- x-revision:          1

--------------------------------------------------
-- Metadata --------------------------------------
--------------------------------------------------

synopsis:
 __Synopsis__

description:
 __Synopsis__
 .
 __Description__

category: __Categories__

--------------------------------------------------

license:             GPL-3.0-or-later
license-file:        LICENSE.txt
copyright:           2018 __Name__

author:              __Name__
maintainer:          __Name__ <__Email__>

--------------------------------------------------

stability:           provisional
tested-with:
            GHC == 8.2.2
          , GHC == 8.4.3
          , GHC == 8.6.1

          -- NOTE ❲ -XDerivingStrategies ❳ requires ❲ GHC >= 8.2 ❳.

--------------------------------------------------
-- (Non-Code) Files ------------------------------
--------------------------------------------------

extra-source-files:
                   README.md
                   LICENSE.txt
                   .gitignore
                   Makefile
                   shell.nix
                   nix/**/*.nix
                   nix/**/*.json

--------------------------------------------------
                   
-- data-files:
--            data/*.txt

--------------------------------------------------
-- REPOSITORY
--------------------------------------------------

homepage:            http://github.com/__GithubUser__/__Repository__#readme
bug-reports:         http://github.com/__GithubUser__/__Repository__/issues

source-repository head
  type:     git
  location: git://github.com/__GithubUser__/__Repository__.git
  subdir:   xxx-package-directory-xxx

-- source-repository this
--   type:     git
--   location: https://github.com/__GithubUser__/__Repository__/tree/v0.1.0
--   subdir:   xxx-package-directory-xxx

--------------------------------------------------
-- Flags -----------------------------------------
--------------------------------------------------

-- flag ...
--   default:     False
--   description: Enable ...
--   manual:      True

--------------------------------------------------
-- Common Stanzas --------------------------------
--------------------------------------------------

common Haskell2020Library

 ------------------------------

 default-language: Haskell2010
 
 ------------------------------
 
 build-depends:
               base-noprelude >=4.10 && <5

 ------------------------------

 ghc-options:

  --------------------
  -- warning groups
  --------------------

             -Wall

  --------------------
  -- disabled warnings
  --------------------

             -Wno-unticked-promoted-constructors

  --------------------
  -- enabled warnings
  --------------------

  -- enable:

             -Wmissing-methods
             -fwarn-name-shadowing
             -fwarn-tabs
              
  --------------------
  -- typed-holes
  --------------------

  -- use `typed-holes`, not `undefined`, during development

             -fdefer-typed-holes
             -Wtyped-holes

  --------------------
  -- (miscellaneous warnings)
  --------------------

  -- raise a warning into an error
  -- -Werror=missing-fields

 ------------------------------
 
 if impl(ghc >= 8.0)
    ghc-options:

        --------------------
        -- warning groups
        --------------------

                -Wcompat
      
        --------------------
        -- enabled warnings
        --------------------

                -Wnoncanonical-monad-instances
                -Wnoncanonical-monadfail-instances

                -Wincomplete-record-updates
                -Wincomplete-uni-patterns

                -Widentities

                -- -Wmissing-exported-signatures
                -- -Whi-shadowing

 ------------------------------
  
 if impl(ghc >= 8.2)
    ghc-options:

        --------------------
        -- enabled warnings
        --------------------

                -Wcpp-undef

                -Wmissing-home-modules

                -Wunbanged-strict-patterns

 ------------------------------

 default-extensions:

   --------------------
   -- "controversial"
   --------------------
                    NoImplicitPrelude

   --------------------
   -- `deriving`
   --------------------
                    AutoDeriveTypeable
                    DeriveDataTypeable
                    DeriveGeneric
                    DeriveFunctor
                    DeriveFoldable
                    DeriveTraversable
                    DeriveLift
                    StandaloneDeriving

                    DerivingStrategies
                    DeriveAnyClass
                    GeneralizedNewtypeDeriving

   --------------------
   -- syntax
   --------------------
                    PackageImports
                    LambdaCase
                    EmptyCase
                    TypeOperators
                    PostfixOperators
                    BangPatterns
                    KindSignatures
                    NamedFieldPuns
                    RecordWildCards
                    TupleSections
                    MultiWayIf
                    DoAndIfThenElse
                    EmptyDataDecls
                    InstanceSigs
                       
   --------------------
   -- typeclasses
   --------------------
                    MultiParamTypeClasses
                    FlexibleContexts
                    FlexibleInstances
                    TypeFamilies
                    FunctionalDependencies

   --------------------
   -- patterns
   --------------------
                    ViewPatterns
                    PatternSynonyms

   --------------------
   -- (miscellaneous)
   --------------------
                    ScopedTypeVariables

 ------------------------------

 other-extensions:

   --------------------
   -- macros
   --------------------
                  TemplateHaskell
   -- QuasiQuotes

   --------------------
   -- syntax (of literals)
   --------------------
                  OverloadedStrings
                  OverloadedLists

   --------------------
   -- (miscellaneous)
   --------------------

   -- RebindableSyntax
   -- kinds:
   -- DataKinds ConstraintKinds
   -- harmful to inference:
   -- GADTs RankNTypes
   -- (miscellaneous)

--------------------------------------------------

common Haskell2020Program

 import: Haskell2020Library

 ------------------------------

 ghc-options:
 
   --------------------
   -- Compilation -----
   --------------------
 
             -O2

   --------------------
   -- Runtime ---------
   --------------------
 
             -threaded
             -rtsopts -with-rtsopts=-N             
 
   --------------------
   -- Warnings --------
   --------------------
 
             -Wno-missing-signatures
             -fno-warn-type-defaults
             
 ------------------------------

--------------------------------------------------
-- Library ---------------------------------------
--------------------------------------------------
library

 import: Haskell2020Library

 hs-source-dirs:
                library
                internals
              --signatures
 --(TODO: signatures break repl.)

 ------------------------------
 ------------------------------
 exposed-modules:
                 Xxx_Module_xxX
                 
                 Xxx_Module_xxX.Types
                 Xxx_Module_xxX.Core
                 Xxx_Module_xxX.Derived

                 Internal.Xxx_Module_xxX
                 Prelude_Xxx_PackageUnderscores_xxX

 -- other-modules:
 --               Paths_Xxx_PackageUnderscores_xxX
 -- 
 -- autogen-modules:
 --               Paths_Xxx_PackageUnderscores_xxX

 ------------------------------
 ------------------------------

 -- signatures:

 --(TODO: signatures break repl.)

 ------------------------------
 ------------------------------
 build-depends:

  --------------------
  -- my libraries.
  --------------------

               spiros
   ---          , enumerate

  --------------------
  -- boot-libraries & standard-library packages,
  --------------------

             , text
             , bytestring
             , transformers
             , mtl
             , containers

  --------------------
  -- extended(/unofficial) "standard-library" packages.
  --------------------

             , deepseq
             , hashable
             , unordered-containers

  --------------------
  -- parsing libraries.
  --------------------

             , parsers
             , trifecta
             , charset

  --------------------
  -- records libraries.
  --------------------

             , lens
             , generic-lens
             , vinyl
              
  --------------------
  -- (miscellaneous libraries).
  --------------------

             -- , pkg

--------------------------------------------------
-- Tests -----------------------------------------
--------------------------------------------------

test-suite unit
  import: Haskell2020Library
  import: Haskell2020Program

  type:                exitcode-stdio-1.0
  main-is:             UnitTests.hs

  hs-source-dirs:      tests/unit
  other-modules:
                Test.Unit.Xxx_Module_xxX

  -- build-tool-depends:
  --                    hspec-discover:hspec-discover

  build-depends:
                xxx-package-xxx

              , HUnit

              , tasty
              , tasty-hunit

--------------------------------------------------

test-suite property
  import: Haskell2020Library
  import: Haskell2020Program

  type:                exitcode-stdio-1.0
  main-is:             PropertyTests.hs

  hs-source-dirs:      tests/property
  other-modules:
                Test.Property.Xxx_Module_xxX

  build-depends:
                xxx-package-xxx

              , hedgehog

              , tasty
              , tasty-hedgehog

--------------------------------------------------

test-suite golden
  import: Haskell2020Library
  import: Haskell2020Program

  type:                exitcode-stdio-1.0
  main-is:             GoldenTests.hs

  hs-source-dirs:      tests/golden
  other-modules:
                Test.Golden.Xxx_Module_xxX

  build-depends:
                xxx-package-xxx

              , golden

              , tasty
              , tasty-golden

--------------------------------------------------
-- Executables -----------------------------------
--------------------------------------------------

-- see « Xxx_Module_xxX.Program ».

executable xxx-executable-xxx

  import: Haskell2020Library
  import: Haskell2020Program

  main-is:             Main.hs

  hs-source-dirs:      executables/program
  other-modules:
                Xxx_Module_xxX.Main
                Xxx_Module_xxX.Options
                Xxx_Module_xxX.Program
                
                Prelude_exe

  build-depends:
                xxx-package-xxx

              , optparse-applicative

--------------------------------------------------

executable example-xxx-package-xxx
  import: Haskell2020Library
  import: Haskell2020Program

  main-is:             Main.hs

  hs-source-dirs:      executables/example
  other-modules:
                Example.Xxx_Module_xxX

  build-depends:
                xxx-package-xxx

--------------------------------------------------
-- Benchmarks ------------------------------------
--------------------------------------------------

-- benchmark time

--------------------------------------------------

-- benchmark space

--------------------------------------------------
-- Objects (« .so », « .dylib », « .dl; ») -------
--------------------------------------------------

--
-- foreign-library xxx-package-xxx
--   ------------------------------
--   type:                native-shared
--   lib-version-info:    0:0:0
--   if os(Windows)
--     options: standalone
--     -- mod-def-file: xxx-package-xxx.def
--   ------------------------------
--   hs-source-dirs:
--     lib
--   other-modules:
--   ------------------------------  
--   include-dirs:
--     cbits
--   includes:
--     emacs-module.h
--   install-includes:
--     emacs-module.h
--   c-sources:
--     cbits/emacs_wrapper.c
--   ------------------------------
--   ghc-prof-options:
--     -fprof-auto
--   ------------------------------
--   build-tools:
--     hsc2hs
--   build-depends:
--                 xxx-package-xxx
--               , bytestring
--               , safe-exceptions-checked
--   ------------------------------
--------------------------------------------------